--- a/Checkout.html
+++ b/Checkout.html
@@ -76,7 +76,7 @@
                         ><i class="far fa-trash-alt fa-1x text-danger"></i
                       ></a>
                     </td>
-                    <td>ARAI RX-7X NAKAGAMI GP2全罩安全帽</td>
+                    <td><a href="Browse.html">ARAI RX-7X NAKAGAMI GP2全罩安全帽</a></td>
                     <td>1件</td>
                     <td>$520</td>
                   </tr>
@@ -90,7 +90,7 @@
                         ><i class="far fa-trash-alt fa-1x text-danger"></i
                       ></a>
                     </td>
-                    <td>全白瓜皮安全帽</td>
+                    <td><a href="Browse.html">全白瓜皮安全帽</a></td>
                     <td>1件</td>
                     <td>$480</td>
                   </tr>
@@ -170,7 +170,7 @@
                         height="50px"
                       />
                     </td>
-                    <td class="align-middle">ARAI RX-7X NAKAGAMI GP2全罩安全帽</td>
+                    <td><a href="Browse.html">ARAI RX-7X NAKAGAMI GP2全罩安全帽</a></td>
                     <td class="align-middle">1件</td>
                     <td class="align-middle text-right">$520</td>
                   </tr>
@@ -193,7 +193,7 @@
                         height="50px"
                       />
                     </td>
-                    <td class="align-middle">全白瓜皮安全帽</td>
+                    <td><a href="Browse.html">全白瓜皮安全帽</a></td> 
                     <td class="align-middle">1件</td>
                     <td class="align-middle text-right">$520</td>
                   </tr>
