--- a/Browse.html
+++ b/Browse.html
@@ -48,13 +48,13 @@
                             <tbody>
                                 <tr>
                                     <td><i class="far fa-trash-alt fa-1x"></i></td>
-                                    <td>ARAI RX-7X NAKAGAMI GP2全罩安全帽</td>
+                                    <td><a href="Browse.html">ARAI RX-7X NAKAGAMI GP2全罩安全帽</a></td>
                                     <td>1件</td>
                                     <td>$520</td>
                                 </tr>
                                 <tr>
                                     <td><i class="far fa-trash-alt fa-1x"></i></td>
-                                    <td>全白瓜皮安全帽</td>
+                                    <td><a href="Browse.html">ARAI RX-7X NAKAGAMI GP2全罩安全帽</a></td>
                                     <td>1件</td>
                                     <td>$520</td>
                                 </tr>
@@ -62,6 +62,12 @@
                                     <td colspan="4"><button type="submit" class="btn btn-primary btn-block">送出</button>
                                     </td>
                                 </tr>
+
+
+
+
+
+                                
                             </tbody>
                         </table>
                     </div>
