--- a/CheckoutEnd.html
+++ b/CheckoutEnd.html
@@ -110,7 +110,7 @@
             <tbody>
               <tr>
                 <th class="py-3">Email</th>
-                <td class="align-middle">ntub****@gmail.com</td>
+                <td class="align-middle">N1106499****@ntub.edu.tw</td>
               </tr>
               <tr>
                 <th class="py-2">姓名</th>
