--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>安全喵購物網</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -39,13 +41,11 @@
       }
     </style>
   </head>
-
   <body>
-    <!--navber-->
+   
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="/"
-        ><i class="fas fa-shopping-basket"></i>安全喵購物網</a
-      >
+        ><i class="fas fa-shopping-basket"></i>安全喵購物網</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -53,10 +53,23 @@
         data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent"
         aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
+        aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
+
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item"><a class="nav-link" href="Browse.html">商品列表</a></li>
+            <li class="nav-item"><a class="nav-link" href="Favorites.html">我的最愛</a></li>
+            <li class="nav-item"><a class="nav-link" href="Checkout.html">結帳</a></li>
+            <a href="login.html" class="nav-link">登入</a>
+            <li class="nav-item"><a class="nav-link" href="admin.html">管理後台</a></li>
+            <li class="nav-item"><a class="nav-link" href="Member.html  ">會員中心</a></li>
+        </ul>
+    </div>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto"></ul>
@@ -67,8 +80,7 @@
           </button>
           <div
             class="dropdown-menu dropdown-menu-right"
-            style="min-width: 300px"
-          >
+            style="min-width: 300px">
             <div class="px-4 py-3">
               <table class="table table-sm">
                 <thead>
@@ -85,7 +97,7 @@
                         ><i class="far fa-trash-alt fa-1x text-danger"></i
                       ></a>
                     </td>
-                    <td>ARAI RX-7X NAKAGAMI GP2全罩安全帽</td>
+                     <td><a href="Browse.html">ARAI RX-7X NAKAGAMI GP2全罩安全帽</a></td>
                     <td>1件</td>
                     <td class="text-right text-danger">$520</td>
                   </tr>
@@ -99,7 +111,7 @@
                         ><i class="far fa-trash-alt fa-1x text-danger"></i
                       ></a>
                     </td>
-                    <td>全白瓜皮安全帽</td>
+                    <td><a href="Browse.html">全白瓜皮安全帽</a></td>
                     <td>1件</td>
                     <td class="text-right text-danger">$520</td>
                   </tr>
@@ -798,7 +810,7 @@
       </div>
     </footer>
 
-    <!-- Modal -->
+
     <div
       class="modal fade"
       id="removeModal"
