--- a/Checkout.html
+++ b/Checkout.html
@@ -278,7 +278,7 @@
                 class="btn btn-secondary"
                 >繼續選購</a
               >
-              <a href="./CheckoutEnd.html" class="btn btn-primary"
+              <a href="./Payment.html" class="btn btn-primary"
                 >確認付款</a
               >
             </div>
