--- a/Checkout.html
+++ b/Checkout.html
@@ -34,9 +34,7 @@
   <body>
     <!--navber-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="/"
-        ><i class="fas fa-shopping-basket"></i>安全喵購物網</a
-      >
+      <a class="navbar-brand" href="/"><i class="fas fa-shopping-basket"></i>安全喵購物網</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -44,8 +42,7 @@
         data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent"
         aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
+        aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
@@ -274,7 +271,7 @@
             </div>
             <div class="text-right">
               <a
-                href="./index.html"
+                href="./productList.html"
                 class="btn btn-secondary"
                 >繼續選購</a
               >
