--- a/Member.html
+++ b/Member.html
@@ -16,6 +16,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link" href="productList.html">商品列表</a></li>
                 <li class="nav-item"><a class="nav-link" href="Profile.html">個人資料</a></li>
                 <li class="nav-item"><a class="nav-link" href="Coupons.html">優惠卷</a></li>
                 <li class="nav-item"><a class="nav-link" href="Points.html">積分</a></li>
@@ -27,6 +28,7 @@
     <div class="container">
         <h1>會員中心</h1>
         <div class="list-group">
+            <a href="productList.html" class="list-group-item list-group-item-action">商品列表</a>
             <a href="Checkout.html" class="list-group-item list-group-item-action">訂單列表</a>
             <a href="Profile.html" class="list-group-item list-group-item-action">個人資料</a>
             <a href="Coupons.html" class="list-group-item list-group-item-action">優惠卷</a>
