--- a/Favorites.html
+++ b/Favorites.html
@@ -10,12 +10,13 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="index.html">安全喵購物網</a>
+        <a class="navbar-brand" href= "index.html" >安全喵購物網</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link" href="productList.html">商品列表</a></li>
                 <li class="nav-item"><a class="nav-link" href="Browse.html">訂單列表</a></li>
                 <li class="nav-item"><a class="nav-link" href="Profile.html">個人資料</a></li>
                 <li class="nav-item"><a class="nav-link" href="Coupons.html">優惠卷</a></li>
