--- a/Points.html
+++ b/Points.html
@@ -16,6 +16,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link" href="productList.html">商品列表</a></li>
                 <li class="nav-item"><a class="nav-link" href="OrderList.html">訂單列表</a></li>
                 <li class="nav-item"><a class="nav-link" href="Profile.html">個人資料</a></li>
                 <li class="nav-item"><a class="nav-link" href="Coupons.html">優惠卷</a></li>
