--- a/Profile.html
+++ b/Profile.html
@@ -16,9 +16,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link" href="productList.html">商品列表</a></li>
                 <li class="nav-item"><a class="nav-link" href="Checkout.html">訂單列表</a></li>
                 <li class="nav-item"><a class="nav-link" href="Profile.html">個人資料</a></li>
-                <li class="nav-item"><a class="nav-link" href="ChangePassword.html">修改密碼</a></li>
                 <li class="nav-item"><a class="nav-link" href="Coupons.html">優惠卷</a></li>
                 <li class="nav-item"><a class="nav-link" href="Points.html">積分</a></li>
                 <li class="nav-item"><a class="nav-link" href="Favorites.html">喜好商品</a></li>
@@ -62,7 +62,7 @@
                     data: $('#profileForm').serialize(),
                     success: function(response) {
                         alert("儲存成功！");
-                        window.location.href = "index.html";
+                        window.location.href = "productList.html";
                     },
                     error: function() {
                         alert("儲存失敗，請稍後再試。");
