--- a/productList.html
+++ b/productList.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>安全喵購物網</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    />
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -42,10 +45,10 @@
     </style>
   </head>
   <body>
-   
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="/"
-        ><i class="fas fa-shopping-basket"></i>安全喵購物網</a>
+        ><i class="fas fa-shopping-basket" href="index.html"></i>安全喵購物網</a
+      >
       <button
         class="navbar-toggler"
         type="button"
@@ -53,23 +56,39 @@
         data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent"
         aria-expanded="false"
-        aria-label="Toggle navigation">
+        aria-label="Toggle navigation"
+      >
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNav"
+      >
         <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link" href="productList.html">商品列表</a></li>
-            <li class="nav-item"><a class="nav-link" href="Favorites.html">我的最愛</a></li>
-            <li class="nav-item"><a class="nav-link" href="Checkout.html">結帳</a></li>
-            <a href="login.html" class="nav-link">登入</a>
-            <li class="nav-item"><a class="nav-link" href="admin.html">管理後台</a></li>
-            <li class="nav-item"><a class="nav-link" href="Member.html  ">會員中心</a></li>
+          <li class="nav-item">
+            <a class="nav-link" href="productList.html">商品列表</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Favorites.html">我的最愛</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Checkout.html">結帳</a>
+          </li>
+          <a href="login.html" class="nav-link">登入</a>
+          <li class="nav-item">
+            <a class="nav-link" href="admin.html">管理後台</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Member.html  ">會員中心</a>
+          </li>
         </ul>
-    </div>
+      </div>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto"></ul>
@@ -80,7 +99,8 @@
           </button>
           <div
             class="dropdown-menu dropdown-menu-right"
-            style="min-width: 300px">
+            style="min-width: 300px"
+          >
             <div class="px-4 py-3">
               <table class="table table-sm">
                 <thead>
@@ -97,7 +117,11 @@
                         ><i class="far fa-trash-alt fa-1x text-danger"></i
                       ></a>
                     </td>
-                     <td><a href="Browse.html">ARAI RX-7X NAKAGAMI GP2全罩安全帽</a></td>
+                    <td>
+                      <a href="Browse.html"
+                        >ARAI RX-7X NAKAGAMI GP2全罩安全帽</a
+                      >
+                    </td>
                     <td>1件</td>
                     <td class="text-right text-danger">$520</td>
                   </tr>
@@ -809,7 +833,6 @@
         </ul>
       </div>
     </footer>
-
 
     <div
       class="modal fade"
