--- a/login.html
+++ b/login.html
@@ -27,6 +27,7 @@
             <button type="submit" class="btn btn-primary">登入</button>
             <a href="register.html" class="btn btn-link">註冊</a>
             <a href="forgot_password.html" class="btn btn-link">忘記密碼</a>
+            <a href="index.html" class="btn btn-link float-right">返回首頁</a>
         </form>
     </div>
     
