--- a/productList.html
+++ b/productList.html
@@ -75,6 +75,9 @@
             <a class="nav-link" href="productList.html">商品列表</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="order.html">我的訂單</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="Favorites.html">我的最愛</a>
           </li>
           <li class="nav-item">
