--- a/register.html
+++ b/register.html
@@ -23,6 +23,8 @@
                 <input type="password" class="form-control" id="password" name="password" required>
             </div>
             <button type="submit" class="btn btn-primary">註冊</button>
+            <a href="login.html" class="btn btn-link">上一頁</a>
+            <a href="index.html" class="btn btn-link">返回首頁</a>
 
         </form>
     </div>
