--- a/BrowsingHistory.html
+++ b/BrowsingHistory.html
@@ -41,9 +41,7 @@
           <li class="nav-item">
             <a class="nav-link" href="productList.html">商品列表</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="OrderList.html">訂單列表</a>
-          </li>
+          <li class="nav-item"><a class="nav-link" href="order.html">我的訂單</a> </li>
           <li class="nav-item">
             <a class="nav-link" href="Profile.html">個人資料</a>
           </li>
