--- a/Profile.html
+++ b/Profile.html
@@ -30,7 +30,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link" href="productList.html">商品列表</a></li>
-                <li class="nav-item"><a class="nav-link" href="Checkout.html">訂單列表</a></li>
+                <li class="nav-item"><a class="nav-link" href="order.html">我的訂單</a> </li>
                 <li class="nav-item"><a class="nav-link" href="Profile.html">個人資料</a></li>
                 <li class="nav-item"><a class="nav-link" href="Coupons.html">優惠卷</a></li>
                 <li class="nav-item"><a class="nav-link" href="Points.html">積分</a></li>
