--- a/forgot_password.html
+++ b/forgot_password.html
@@ -15,6 +15,8 @@
                 <input type="email" class="form-control" id="email" name="email" required>
             </div>
             <button type="submit" class="btn btn-primary">提交</button>
+            <a href="login.html" class="btn btn-link">上一頁</a>
+            <a href="index.html" class="btn btn-link">返回首頁</a>
         </form>
     </div>
 </body>
