--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
               <li class="nav-item"><a class="nav-link" href="productList.html">商品列表</a></li>
+              <li class="nav-item"><a class="nav-link" href="order.html">我的訂單</a> </li>
               <li class="nav-item"><a class="nav-link" href="Favorites.html">我的最愛</a></li>
               <li class="nav-item"><a class="nav-link" href="Checkout.html">結帳</a></li>
               <a href="login.html" class="nav-link">登入</a>
