--- a/forgot_password.html
+++ b/forgot_password.html
@@ -16,7 +16,7 @@
             </div>
             <button type="submit" class="btn btn-primary">提交</button>
             <a href="login.html" class="btn btn-link">上一頁</a>
-            <a href="index.html" class="btn btn-link">返回首頁</a>
+            <a href="index.html" class="btn btn-link float-right">返回首頁</a>
         </form>
     </div>
 </body>
