--- a/register.html
+++ b/register.html
@@ -24,7 +24,7 @@
             </div>
             <button type="submit" class="btn btn-primary">註冊</button>
             <a href="login.html" class="btn btn-link">上一頁</a>
-            <a href="index.html" class="btn btn-link">返回首頁</a>
+            <a href="index.html" class="btn btn-link float-right">返回首頁</a>
 
         </form>
     </div>
