活動訂單詳情

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
               <a href="login.html" class="nav-link">登入</a>
               <li class="nav-item"><a class="nav-link" href="admin.html">管理後台</a></li>
               <li class="nav-item"><a class="nav-link" href="Member.html  ">會員中心</a></li>
+              <li class="nav-item"><a class="nav-link" href="Activity.html">最新活動</a></li>
           </ul>
       </div>
   
@@ -158,7 +159,7 @@
     <div class="container mt-5">
         <h2>促銷活動</h2>
         <div class="alert alert-success">
-            <marquee><strong>限時優惠！</strong> 購買任意兩頂安全帽，享受20%折扣！</marquee>
+            <marquee><strong>限時優惠！</strong> 單件安全帽打9折</marquee>
         </div>
     </div>
 
