活動訂單詳情

--- a/Browse.html
+++ b/Browse.html
@@ -73,8 +73,8 @@
     <div class="container">
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb bg-transparent pl-0">
-                <li class="breadcrumb-item"><a href="#">最新消息</a></li>
-                <li class="breadcrumb-item"><a href="#">品牌介紹</a></li>
+                <li class="breadcrumb-item"><a href="./productList.html">最新消息</a></li>
+                <li class="breadcrumb-item"><a href="./productList.html">品牌介紹</a></li>
                 <li class="breadcrumb-item active" aria-current="page">安全喵</li>
             </ol>
         </nav>
