--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     <div class="container mt-5">
         <h2>促銷活動</h2>
         <div class="alert alert-success">
-            <marquee><strong>限時優惠！</strong> 單件安全帽打9折</marquee>
+            <marquee><strong>限時優惠！</strong> 任選兩頂安全帽就打85折</marquee>
         </div>
     </div>
 
