--- a/productList.html
+++ b/productList.html
@@ -276,8 +276,8 @@
             <a
               href="#pane-5"
               class="list-group-item list-group-item-action"
-              data-toggle="list"
-            >
+              data-toggle="list">
+              
               <i class=""></i>關於品牌
             </a>
           </div>
@@ -753,8 +753,7 @@
                         <img
                           class="card-img-top"
                           src="./image/11.jpg"
-                          alt="Card image cap"
-                        />
+                          alt="Card image cap" />
                         <div class="card-body">
                           <h5 class="card-title">
                             ARAI RX-7X NAKAGAMI GP2全罩安全帽
@@ -768,13 +767,62 @@
                           <a
                             href="./Browse.html"
                             class="btn btn-outline-secondary btn-block"
-                            >購買去</a
-                          >
+                            >購買去</a>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="col-md-4">
+                      <div class="card box-shadow text-center h-100">
+                        <img
+                          class="card-img-top"
+                          src="./image/63.jpg"
+                          alt="Card image cap" />
+                        <div class="card-body">
+                          <h5 class="card-title">
+                            T318S-Pilot <br>
+                            領航員
+                          </h5><br>
+                          <p class="card-text">
+                            全新上架T318S-Pilot 領航員
+                            7/15 - 7/31購買此商品，就贈送防摔手套乙組!
+                          </p>
+                        </div>
+                        <div class="card-footer">
+                          <a
+                            href="./T386N.html"
+                            class="btn btn-outline-secondary btn-block"
+                            >購買去</a>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="col-md-4">
+                      <div class="card box-shadow text-center h-100">
+                        <img
+                          class="card-img-top"
+                          src="./image/13.jpg"
+                          alt="Card image cap" />
+                        <div class="card-body">
+                          <h5 class="card-title">
+                            K3SV TARTARUGA 烏龜帽全罩式安全帽
+                          </h5><br>
+                          <p class="card-text">
+                            K3SV TARTARUGA 烏龜帽全罩式安全帽
+                           限量十頂，要買要快!
+                          </p>
+                        </div>
+                        <div class="card-footer">
+                          <a
+                            href="./Browse.html"
+                            class="btn btn-outline-secondary btn-block"
+                            >購買去</a>
                         </div>
                       </div>
                     </div>
                   </div>
                 </div>
+                
 
                 <div class="tab-pane" id="pane-5">
                   <div class="row">
