--- a/Activity.html
+++ b/Activity.html
@@ -115,14 +115,44 @@
                 <li class="nav-item"><a class="nav-link" href="Member.html">會員中心</a></li>
                 <li class="nav-item active"><a class="nav-link" href="events.html">活動消息 <span class="sr-only">(current)</span></a></li>
             </ul>
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link cart-icon" href="cart.html">
-                        <i class="fas fa-shopping-cart"></i>
-                        <span class="badge">0</span>
-                    </a>
-                </li>
-            </ul>
+            
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                </ul>
+                <div class="dropdown ml-auto">
+                    <button class="btn btn-sm btn-cart" data-toggle="dropdown">
+                        <i class="fas fa-shopping-cart text-dark fa-2x"></i>
+                        <span class="badge badge-pill badge-danger">2</span>
+                    </button>
+                    <div class="dropdown-menu dropdown-menu-right" style="min-width:300px">
+                        <div class="px-4 py-3">
+                            <table class="table table-sm">
+                                <thead>
+                                    <th colspan="4" class="text-center">已選擇商品</th>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td><i class="far fa-trash-alt fa-1x"></i></td>
+                                        <td><a href="Browse.html">ARAI RX-7X NAKAGAMI GP2全罩安全帽</a></td>
+                                        <td>1件</td>
+                                        <td>$520</td>
+                                    </tr>
+                                    <tr>
+                                        <td><i class="far fa-trash-alt fa-1x"></i></td>
+                                        <td><a href="Browse.html">全白西瓜皮安全帽</a></td>
+                                        <td>1件</td>
+                                        <td>$520</td>
+                                    </tr>
+                                    <tr>
+                                        <td colspan="4"><button type="submit" class="btn btn-primary btn-block">送出</button>
+                                        </td>
+                                    </tr>
+    
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
         </div>
     </nav>
 
