--- a/productList.html
+++ b/productList.html
@@ -701,7 +701,8 @@
           // }
         }
         document.getElementById("searchInput").value = "";
-        console.log("Hello World");
+        // console.log("Hello World");
+        // console.log("Hello World");
       });
 
     });
