--- a/Favorites.html
+++ b/Favorites.html
@@ -4,56 +4,59 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>喜好商品</title>
-    <link
-    rel="stylesheet"
-    href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-  />
-    <link
-    rel="stylesheet"
-    href="https://use.fontawesome.com/releases/v5.4.2/css/all.css"
-    integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns"
-    crossorigin="anonymous"
-  />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
+    <style>
+        .navbar-brand i {
+            margin-right: 10px;
+        }
+        .card {
+            margin-bottom: 20px;
+        }
+        .card img {
+            height: 350px;
+            object-fit: cover;
+        }
+    </style>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="/"
-        ><i class="fas fa-shopping-basket" href="index.html"></i>安全喵購物網</a
-      >
+        <a class="navbar-brand" href="/"><i class="fas fa-shopping-basket"></i>安全喵購物網</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav ml-auto">
                 <li class="nav-item"><a class="nav-link" href="productList.html">商品列表</a></li>
-                <li class="nav-item"><a class="nav-link" href="order.html">我的訂單</a> </li>
+                <li class="nav-item"><a class="nav-link" href="order.html">我的訂單</a></li>
                 <li class="nav-item"><a class="nav-link" href="Profile.html">個人資料</a></li>
-                <li class="nav-item"><a class="nav-link" href="Coupons.html">優惠卷</a></li>
+                <li class="nav-item"><a class="nav-link" href="Coupons.html">優惠券</a></li>
                 <li class="nav-item"><a class="nav-link" href="Points.html">積分</a></li>
                 <li class="nav-item"><a class="nav-link" href="Favorites.html">喜好商品</a></li>
                 <li class="nav-item"><a class="nav-link" href="BrowsingHistory.html">瀏覽紀錄</a></li>
             </ul>
         </div>
     </nav>
-    <div class="container">
-        <h1>喜好商品</h1>
+    <div class="container mt-5">
+        <h1 class="mb-4">喜好商品</h1>
         <div class="row">
             <div class="col-md-4">
                 <div class="card">
                     <img class="card-img-top" src="image/11.jpg" alt="商品圖片">
                     <div class="card-body">
-                        <h5 class="card-title">商品名稱</h5>
+                        <h5 class="card-title">ARAI RX-7X NAKAGAMI GP2全罩安全帽</h5>
                         <p class="card-text">金額：$550</p>
                         <p class="card-text">XL</p>
-                        <a href="#" class="btn btn-primary">修改</a>
-                        <a href="#" class="btn btn-danger">刪除</a>
+                        <div class="d-flex justify-content-between">
+                            <a href="#" class="btn btn-primary">修改</a>
+                            <a href="#" class="btn btn-danger">刪除</a>
+                        </div>
                     </div>
                 </div>
             </div>
-           
+            <!-- 可以在這裡添加更多商品卡片 -->
         </div>
     </div>
 </body>
