--- a/Payment.html
+++ b/Payment.html
@@ -1,88 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>安全喵喵金流付款</title>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css"
+        integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
+        integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Microsoft JhengHei", Roboto, "Helvetica Neue", Arial, sans-serif;
         }
     </style>
 </head>
+
 <body>
+
+
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="/"><i class="fas fa-shopping-basket"></i> 安全喵購物網</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto"></ul>
         </div>
+
     </nav>
+
     <div class="container main-contant py-5">
         <h1 class="text-center mb-3 text-secondary">安全喵喵 金流付款</h1>
-        <form id="payment-form">
-            <div class="form-row">
-                <div class="form-group col-md-6">
-                    <label for="name">姓名</label>
-                    <input type="text" class="form-control" id="name" placeholder="姓名" required>
-                </div>
-                <div class="form-group col-md-6">
-                    <label for="phone">電話</label>
-                    <input type="text" class="form-control" id="phone" placeholder="電話" required>
+        <div class="form-row text-center">
+            <div class="col-12 col-sm">
+                <div class="alert alert-light alert-rounded" role="alert">
+                    1.確認訂單
                 </div>
             </div>
-            <div class="form-group">
-                <label for="address">寄送地址</label>
-                <input type="text" class="form-control" id="address" placeholder="寄送地址" required>
-            </div>
-            <div class="form-group">
-                <label>付款方式</label>
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="paymentMethod" id="atm" value="ATM轉帳" checked>
-                    <label class="form-check-label" for="atm">
-                        ATM轉帳
-                    </label>
-                </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="paymentMethod" id="cod" value="貨到付款">
-                    <label class="form-check-label" for="cod">
-                        貨到付款
-                    </label>
+            <div class="col-12 col-sm">
+                <div class="alert alert-primary alert-rounded" role="alert">
+                    2.金流付款
                 </div>
             </div>
-            <button type="submit" class="btn btn-primary">確認付款</button>
-            <button type="button" class="btn btn-secondary" id="cancel-button">取消付款</button>
-        </form>
-    </div>
-    <footer class="bg-light text-muted py-5">
-        <div class="container">
-            <ul class="list-inline text-center">
-                <li class="list-inline-item">© Copyright 2024 安全喵喵</li>
-                <li class="list-inline-item"><a href="#" class="text-info"><i class="fab fa-facebook-f"></i> Facebook</a></li>
-                <li class="list-inline-item"><a href="#" class="text-info"><i class="fab fa-instagram"></i> Instagram</a></li>
-                <li class="list-inline-item"><a href="#" class="text-info"><i class="fas fa-user-tag"></i> About</a></li>
-            </ul>
+            <div class="col-12 col-sm">
+                <div class="alert alert-light alert-rounded" role="alert">3.購物完成</div>
+            </div>
         </div>
-    </footer>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
-    <script>
-        $(document).ready(function() {
-            $('#payment-form').on('submit', function(event) {
-                event.preventDefault();
-                window.location.href = 'CheckoutEnd.html';
-            });
+        <div class="container main-contant py-5">
 
-            $('#cancel-button').on('click', function() {
-                window.location.href = '/';
+            <form id="payment-form">
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="name">姓名</label>
+                        <input type="text" class="form-control" id="name" placeholder="姓名" required>
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label for="phone">電話</label>
+                        <input type="text" class="form-control" id="phone" placeholder="電話" required>
+                    </div>
+
+                    <div class="form-group col-md">
+                        <label for="inputEmail">Email</label>
+                        <input type="email" class="form-control" id="inputEmail" placeholder="Email" required />
+                        <div class="invalid-feedback">請輸入信箱</div>
+                    </div>
+                </div>
+
+                <div class="form-row">
+                    <div class="form-group col-md">
+                        <label for="address1">國家</label>
+                        <select id="address1" class="form-control" required>
+                            <option selected>台灣...</option>
+                            <option>...</option>
+                        </select>
+                        <div class="invalid-feedback">請輸入國家</div>
+                    </div>
+                    <div class="form-group col-md">
+                        <label for="address2">城市</label>
+                        <select id="address2" class="form-control" required>
+                            <option selected>台北市</option>
+                            <option>...</option>
+                        </select>
+                        <div class="invalid-feedback">請輸入居住地</div>
+                    </div>
+                    <div class="form-group col-md">
+                        <label for="number" required>郵遞區號</label>
+                        <input type="text" class="form-control" id="number" required />
+                        <div class="invalid-feedback">請輸入郵遞區號</div>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label for="address">寄送地址</label>
+                    <input type="text" class="form-control" id="address" placeholder="寄送地址" required>
+                </div>
+                <div class="form-group">
+                    <label>付款方式</label>
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="paymentMethod" id="atm" value="ATM轉帳"
+                            checked>
+                        <label class="form-check-label" for="atm">
+                            ATM轉帳
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="paymentMethod" id="cod" value="貨到付款">
+                        <label class="form-check-label" for="cod">
+                            貨到付款
+                        </label>
+                    </div>
+                </div>
+                <button type="submit" class="btn btn-primary">確認付款</button>
+                <button type="button" class="btn btn-secondary" id="cancel-button">取消付款</button>
+            </form>
+        </div>
+        <footer class="bg-light text-muted py-5">
+            <div class="container">
+                <ul class="list-inline text-center">
+                    <li class="list-inline-item">© Copyright 2024 安全喵喵</li>
+                    <li class="list-inline-item"><a href="#" class="text-info"><i class="fab fa-facebook-f"></i>
+                            Facebook</a></li>
+                    <li class="list-inline-item"><a href="#" class="text-info"><i class="fab fa-instagram"></i>
+                            Instagram</a></li>
+                    <li class="list-inline-item"><a href="#" class="text-info"><i class="fas fa-user-tag"></i> About</a>
+                    </li>
+                </ul>
+            </div>
+        </footer>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+            integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+            crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
+            integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
+            crossorigin="anonymous"></script>
+        <script>
+            $(document).ready(function () {
+                $('#payment-form').on('submit', function (event) {
+                    event.preventDefault();
+                    window.location.href = 'CheckoutEnd.html';
+                });
+
+                $('#cancel-button').on('click', function () {
+                    window.location.href = '/';
+                });
             });
-        });
-    </script>
+        </script>
 </body>
+
 </html>
