--- a/productList.html
+++ b/productList.html
@@ -23,16 +23,92 @@
     body {
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
         "Microsoft JhengHei", Roboto, "Helvetica Neue", Arial, sans-serif;
+    
     }
 
     .card-img-top {
       height: 14rem;
     }
+
+    h2 {
+    font-size: 2rem;
+    margin-top: 2rem;
+    margin-bottom: 1.5rem;
+    text-align: center;
+    }
+
+    h3 {
+    font-size: 1.75rem;
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
+    text-align: center;
+    }
+
+    p {
+    font-size: 1rem;
+    line-height: 1.6;
+    margin-bottom: 1.5rem;
+    }
+    .card img {
+    max-width: 100%;
+    height: auto;
+    margin-bottom: 15px;
+    }
+    .btn:hover, .card a:hover {
+    background-color: #0056b3;
+    color: #fff;
+    transition: background-color 0.3s;
+    }
+    .border-bottom {
+    padding-bottom: 15px;
+    margin-bottom: 15px;
+    }
+    .search-txt-tag {
+    background-color: #ffffcc;
+    }
+    .card:hover {
+        transform: scale(1.05);
+        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+        transition: all 0.3s;
+    }
+    .product-title {
+        font-size: 2rem;
+        margin-bottom: 10px;
+    }
+
+    .price-area {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin-bottom: 20px;
+    }
+
+    .price-area .text-muted {
+        font-size: 1.25rem;
+    }
+
+    .price-area .h3 {
+        font-size: 2rem;
+    }
+
+    .btn-group-toggle .btn {
+        margin-right: 5px;
+    }
+
+    .btn-primary {
+        background-color: #007bff;
+        border-color: #007bff;
+    }
+    .card:hover {
+        transform: scale(1.05);
+        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+        transition: all 0.3s;
+    }
   </style>
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
     <a class="navbar-brand" href="/"><i class="fas fa-shopping-basket" href="index.html"></i>安全喵購物網</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -79,7 +155,7 @@
           <div class="px-4 py-3">
             <table class="table table-sm">
               <thead>
-                <th colspan="4" class="text-center">已選擇商品</th>
+                <th colspan="4" class="text-center">已選擇商品P</th>
               </thead>
               <tbody>
                 <tr>
@@ -361,10 +437,10 @@
                   </div>
                   <div class="card-footer">
                     <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
-                      <a href="T3BX.html" class="btn btn-outline-secondary ">SM</a>
-                      <a href="T3BX.html" class="btn btn-outline-secondary ">M</a>
-                      <a href="T3BX.html" class="btn btn-outline-secondary ">L</a>
-                      <a href="T3BX.html" class="btn btn-outline-secondary ">XL</a>
+                      <a href="./Browse.html" class="btn btn-outline-secondary ">SM</a>
+                      <a href="./Browse.html" class="btn btn-outline-secondary ">M</a>
+                      <a href="./Browse.html" class="btn btn-outline-secondary ">L</a>
+                      <a href="./Browse.html" class="btn btn-outline-secondary ">XL</a>
                     </div>
                   </div>
                 </div>
@@ -383,10 +459,10 @@
                   </div>
                   <div class="card-footer">
                     <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
-                      <a href="T386N.html" class="btn btn-outline-secondary ">SM</a>
-                      <a href="T386N.html" class="btn btn-outline-secondary ">M</a>
-                      <a href="T386N.html" class="btn btn-outline-secondary ">L</a>
-                      <a href="T386N.html" class="btn btn-outline-secondary ">XL</a>
+                      <a href="./Browse.html" class="btn btn-outline-secondary ">SM</a>
+                      <a href="./Browse.html" class="btn btn-outline-secondary ">M</a>
+                      <a href="./Browse.html" class="btn btn-outline-secondary ">L</a>
+                      <a href="./Browse.html" class="btn btn-outline-secondary ">XL</a>
                     </div>
                   </div>
                 </div>
